# pybasics

./: .gitignore  Introduction.ipynb  LICENSE  README.md  Untitled.ipynb  day2  environment.yml  pyproject.toml
Advance/: Unicode2.ipynb  Unicode3.ipynb  Unittesting.ipynb
Beginner/: 1. Datatypes.ipynb  3.Collections.ipynb  Day 10 Practice Session.ipynb  Day 4.ipynb  Day 6.ipynb  Day 7.ipynb  Day 8.ipynb  Day 9.ipynb  Day-3-lfapython.ipynb  Day5.ipynb  merging-into-unit02-unit03-practice.ipynb  merging-into-unit02-unit03.ipynb  unit-00-anaconda.ipynb  unit-01-datatypes-practice.ipynb  unit-01-datatypes-reference.ipynb  unit-01-datatypes-session.ipynb  unit-01-datatypes.ipynb  unit-01-lfapython.ipynb  unit-02-datastructures-practice.ipynb  unit-02-datastructures-reference.ipynb  unit-02-datastructures-session.ipynb  unit-02-datastructures.ipynb  unit-02-practice-0.ipynb  unit-03-datastructures.ipynb  unit-03-functions-reference.ipynb  unit-03-functions.ipynb  unit-03-session.ipynb  unit-04-functions-session.ipynb  unit-04-loops-and-conditionals.ipynb  unit-05-classes-reference.ipynb  unit-05-classes.ipynb  unit-05-practice-1.ipynb  unit-06-assignment.ipynb  unit-06-functions.ipynb  unit-07-practice-2.ipynb  unit-08-classes.ipynb  unit_01_datatypes_idwaker.ipynb  week-01-unit-01-datatypes.ipynb  week-01-unit-01-practice.ipynb  week-01-unit-02-datastructures.ipynb  (+9 more)
Libs/: Flask.ipynb
Problems/: Problem-1.ipynb  unit-01-datatypes-practice.ipynb  unit-05-classes-practice.ipynb
References/: 00.VersionControl.ipynb  1.Datatypes.ipynb  2.Strings.ipynb  3.Collections.ipynb  (+15 more)
(+29 files in other folders)
