[tool.poetry]
name = "pybasics"
version = "0.1.0"
description = "Session files for python basics"
authors = ["Diwaker Ghimire <dwkrghm@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
